examples/type_system/failing/126_list_comprehension_missing_close_bracket.flx
let ys = [x + 1 | x <- [1, 2]
let after = 3
